src/main/java/com/example/stream/quarkus/registry/model/error/GenericError.java
package com.example.stream.quarkus.registry.model.error;

public record GenericError() implements Error {
}
